# encoding-next

./: .git-blame-ignore-revs  AUTHORS.txt  Cargo.toml  Makefile  README.md  calculate-coverage.sh  crates.js  gen_index.py  gen_index_match.py  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: CI.yml
encoding/: all.html  enum.DecoderTrap.html  enum.EncoderTrap.html  fn.decode.html  index.html  sidebar-items.js  struct.CodecError.html  trait.ByteWriter.html  trait.Encoding.html  trait.RawDecoder.html  trait.RawEncoder.html  trait.StringWriter.html  type.DecoderTrapFunc.html  type.EncoderTrapFunc.html  type.EncodingRef.html
encoding-index-japanese/: Cargo.toml  jis0208.rs  jis0212.rs  lib.rs
encoding-index-korean/: Cargo.toml  euc_kr.rs  lib.rs
encoding-index-simpchinese/: Cargo.toml  gb18030.rs  gb18030_ranges.rs  lib.rs
encoding-index-singlebyte/: Cargo.toml  LICENSE  armscii_8.rs  cp437.rs  ibm866.rs  iso_8859_10.rs  iso_8859_13.rs  iso_8859_14.rs  iso_8859_15.rs  iso_8859_16.rs  iso_8859_2.rs  iso_8859_3.rs  iso_8859_4.rs  iso_8859_5.rs  iso_8859_6.rs  iso_8859_7.rs  iso_8859_8.rs  koi8_r.rs  koi8_u.rs  lib.rs  macintosh.rs  windows_1250.rs  windows_1251.rs  windows_1252.rs  windows_1253.rs  windows_1254.rs  windows_1255.rs  windows_1256.rs  windows_1257.rs  windows_1258.rs  windows_874.rs  x_mac_cyrillic.rs
encoding-index-tradchinese/: Cargo.toml  big5.rs  lib.rs
encoding/all/: constant.ARMSCII_8.html  constant.ASCII.html  constant.BIG5_2003.html  constant.CP437.html  constant.ERROR.html  constant.EUC_JP.html  constant.GB18030.html  constant.GBK.html  constant.HZ.html  constant.IBM866.html  constant.ISO_2022_JP.html  constant.ISO_8859_1.html  constant.ISO_8859_10.html  constant.ISO_8859_13.html  constant.ISO_8859_14.html  constant.ISO_8859_15.html  constant.ISO_8859_16.html  constant.ISO_8859_2.html  constant.ISO_8859_3.html  constant.ISO_8859_4.html  constant.ISO_8859_5.html  constant.ISO_8859_6.html  constant.ISO_8859_7.html  constant.ISO_8859_8.html  constant.KOI8_R.html  constant.KOI8_U.html  constant.MAC_CYRILLIC.html  constant.MAC_ROMAN.html  constant.UTF_16BE.html  constant.UTF_16LE.html  constant.UTF_8.html  constant.WINDOWS_1250.html  constant.WINDOWS_1251.html  constant.WINDOWS_1252.html  constant.WINDOWS_1253.html  constant.WINDOWS_1254.html  constant.WINDOWS_1255.html  constant.WINDOWS_1256.html  constant.WINDOWS_1257.html  constant.WINDOWS_1258.html  (+6 more)
encoding/codec/: index.html
encoding/label/: fn.encoding_from_whatwg_label.html  fn.encoding_from_windows_code_page.html  index.html
encoding/types/: enum.DecoderTrap.html  enum.EncoderTrap.html  index.html  struct.CodecError.html  trait.ByteWriter.html  trait.Encoding.html  trait.RawDecoder.html  trait.RawEncoder.html  trait.StringWriter.html  type.DecoderTrapFunc.html  type.EncoderTrapFunc.html  type.EncodingRef.html
encoding_index_japanese/: all.html  index.html
encoding_index_japanese/jis0208/: fn.backward.html  index.html  (+2 more)
encoding_index_korean/: all.html  index.html
encoding_index_simpchinese/: all.html  index.html
encoding_index_singlebyte/: all.html  index.html  sidebar-items.js
encoding_index_tests/: Cargo.toml  all.html  index.html  index_tests.rs  macro.multi_byte_range_tests.html  macro.multi_byte_tests.html  macro.single_byte_tests.html
encoding_index_tradchinese/: all.html  index.html
encoding_types/: all.html  enum.DecoderTrap.html  enum.EncoderTrap.html  index.html  sidebar-items.js  struct.CodecError.html  trait.ByteWriter.html  trait.Encoding.html  trait.RawDecoder.html  trait.RawEncoder.html  trait.StringWriter.html  type.DecoderTrapFunc.html  type.EncoderTrapFunc.html  type.EncodingRef.html
examples/: recode.rs
src/: all.rs  label.rs  lib.rs  testutils.rs  types.rs  util.rs
src/types/: Cargo.toml  lib.rs
src/types/examples/: rot13.rs
(+264 files in other folders)
