[package]
name = "encoding-next"
version = "0.3.0"
exclude = ["/src/index/*", "/Makefile"]
description = "Character encoding support for Rust"
homepage = "https://github.com/alexschrod/encoding-next"
repository = "https://github.com/alexschrod/encoding-next"
keywords = ["encoding", "unicode", "charset"]
readme = "README.md"
license = "MIT"

edition = "2021"

[lib]
name = "encoding"

[features]
no-optimized-legacy-encoding = [
    "encoding-next-index-singlebyte/no-optimized-legacy-encoding",
    "encoding-next-index-korean/no-optimized-legacy-encoding",
    "encoding-next-index-japanese/no-optimized-legacy-encoding",
    "encoding-next-index-simpchinese/no-optimized-legacy-encoding",
    "encoding-next-index-tradchinese/no-optimized-legacy-encoding",
]

[workspace]
members = [
    "encoding-index-singlebyte",
    "encoding-index-korean",
    "encoding-index-japanese",
    "encoding-index-simpchinese",
    "encoding-index-tradchinese",
    "encoding_index_tests",
]

[dependencies.encoding-next-types]
version = "0.2"
path = "src/types"

# version policy for index tables:
# - major: addition or deletion of index tables
# - minor: any content changes to index tables, numbered by the date
# - patch: language changes
#
# we definitely don't want to use the old index table,
# so we should use tilde requirements here.

[dependencies.encoding-next-index-singlebyte]
version = "~1.20180106.0"
path = "encoding-index-singlebyte"

[dependencies.encoding-next-index-korean]
version = "~1.20180106.0"
path = "encoding-index-korean"

[dependencies.encoding-next-index-japanese]
version = "~1.20180106.0"
path = "encoding-index-japanese"

[dependencies.encoding-next-index-simpchinese]
version = "~1.20180106.0"
path = "encoding-index-simpchinese"

[dependencies.encoding-next-index-tradchinese]
version = "~1.20180106.0"
path = "encoding-index-tradchinese"

[dev-dependencies]
getopts = "0.2.21" # for examples

[profile.test]
# `test_correct_table` tests tend to be especially slow
opt-level = 1
