[package]
name = "encoding-next-index-japanese"
version = "1.20180106.0"

description = "Index tables for Japanese character encodings"
homepage = "https://github.com/alexschrod/encoding-next"
license = "CC0-1.0"

edition = "2021"

[lib]
name = "encoding_index_japanese"
path = "lib.rs"

[features]
no-optimized-legacy-encoding = []

[dev-dependencies.encoding-next_index_tests]
version = "0.1.5"
path = "../encoding_index_tests"
